# portflio_next

./: next.config.mjs  package-lock.json  package.json
public/images/3. gpt_integrate_frontend/3. gpt_integrate_frontend/fastgpt/: .envbackup  pyproject.toml
public/images/3. gpt_integrate_frontend/3. gpt_integrate_frontend/fastgpt/fastgpt/: main.py
public/images/3. gpt_integrate_frontend/3. gpt_integrate_frontend/frontend/src/app/: gpt.ts  page.tsx
src/app/(admin)/: layout.tsx
src/app/(admin)/dashboard/: page.tsx
src/app/(admin)/dashboard/ServicesInfo/: page.tsx
src/app/(admin)/dashboard/clientInfo/: page.tsx
src/app/(admin)/dashboard/personalInfo/: page.tsx
src/app/(admin)/dashboard/projectInfo/: page.tsx
src/app/(users)/: layout.tsx  page.tsx
src/app/(users)/about/: page.tsx
src/app/(users)/contact/: page.tsx
src/app/(users)/form/: page.tsx
src/app/(users)/portflio/: page.tsx
src/app/(users)/services/: page.tsx
src/components/: Banner.tsx  ClientForm.tsx  ClientSay.tsx  Contact.tsx  Contactinput.tsx  Contactitems.tsx  EditDialog.tsx  EditMenubar.tsx  Footer.tsx  FormInput.tsx  Header.tsx  Hero.tsx  Introduction.tsx  Login_form.tsx  Loginform.tsx  Navitems.tsx  PersonalForm.tsx  ProjectForm.tsx  Recent.tsx  RecentLinks.tsx  Register.tsx  ServiceForm.tsx  Services.tsx  Sidebar.tsx  Sidebaritems.tsx  Update.tsx  servicesForm.tsx
src/lib/: database.ts  types.tsx
src/server/: personalinfo.ts
